created the home page for the website with the new template

--- a/NewTemplate/index.html
+++ b/NewTemplate/index.html
@@ -47,14 +47,16 @@
         </div>
 	</header>
 	<!-- end header -->
+
+	<!-- start of the banner -->
 	<section id="featured">
-  <i class="fa fa-picture-o"></i>
+  <i class="fa fa-picture-o"><img src="img/logo.png" alt="logo"/></i>
 	</section>
 	<section class="callaction">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="aligncenter"><h1 class="aligncenter">Welcome!</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</div>
+				<div class="aligncenter"><h1 class="aligncenter">Welcome one and all!!!</h1><span class="clear spacer_responsive_hide_mobile" style="height:13px;display:block;"></span>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</div>
 			</div>
 		</div>
 	</div>
@@ -67,12 +69,13 @@
 	<div class="container">
 			<div class="row">
 		<div class="skill-home"> <div class="skill-home-solid clearfix">
-		<div class="col-md-3 text-center">
-		<span class="icons c1"><i class="fa fa-trophy"></i></span>
-    <div class="box-area">
-		<h3>Meeting times</h3> <div class="box-area">
-        <h4></h4>
-        <div class="vertical-simple-list">
+
+<!-- This is the RED section -->
+		<div class="col-md-4 text-center">
+		<span class="icons c1"><i class="fa fa-trophy"></i></span>  <div class="box-area">
+		<h3>Meeting times</h3> <div class="box">
+
+        <div class="vertical-simple-list"><br>
             <p>
                 Sunday 9:30am - Bible Study
             </p>
@@ -83,32 +86,33 @@
                 Wednesday 7:00pm - Bible Study
             </p>
 
-        </div><!-- .vertical-simple-list -->
-    </div><!-- .section-content --></div>
+        </div>
+    </div>
+	</div>
 		</div>
-		<div class="col-md-3 text-center">
+
+		<!-- This is the purple section -->
+		<div class="col-md-4 text-center">
 		<span class="icons c2"><i class="fa fa-picture-o"></i></span> <div class="box-area">
 		<h3>Location</h3> <p>
 
-      <div class="vertical-simple-list">
-
-
-
+      <div class="vertical-simple-list"><br>
               <p><a href="https://www.google.com/maps/place/9413+W+Greenfield+Ave,+West+Allis,+WI+53214/@43.0164229,-88.0296612,17z/data=!3m1!4b1!4m2!3m1!1s0x88050542307b66fd:0xc6cd4d9f2178f8e0">9413 W Greenfield Ave, West Allis, WI</a></h6>
           </a></p>
-
-
-
-              <p>(For directions, call 414-430-2000)
+              <p> We meet on the mural side of Crawdaddy's on Greenfield.
+					</a></p>
+		          <p>(For help with directions, click the address above, or call/text 414-430-2000)
           </a></p>
 
       </div><!-- .vertical-simple-list -->
 
     </p></div>
 		</div>
-		<div class="col-md-3 text-center">
-		<span class="icons c3"><i class="fa fa-desktop"></i></span> <div class="box-area">
-		<h3>Contact Us</h3> <p>
+		<!-- This is the green section -->
+		<div class="col-md-4 text-center">
+		<span class="icons c3"><i class="fa fa-desktop"></i></span>
+			<div class="box-area">
+		<h3>Contact Us!</h3> <p>
 
 
       <div class="section-content clearfix">
@@ -118,7 +122,7 @@
                   <!-- list item -->
                   <div class="item clearfix"><div class="item-content">
                       <div class="icon"><span class="glyphicon glyphicon-map-marker"></span></div>
-                      <h6 class="title">Metro church of Christ<br />9413 W Greenfield Ave<br/>West Allis, WI</h6>
+                      <h6 class="title">West Allis church of Christ<br />9413 W Greenfield Ave<br/>West Allis, WI</h6>
                   </div></div>
               </div><!-- .col-xs-6 -->
 
@@ -132,7 +136,7 @@
                   <!-- list item -->
                   <div class="item clearfix"><div class="item-content">
                       <div class="icon"><span class="glyphicon glyphicon-envelope"></span></div>
-                      <h6 class="title">biblestudies3@gmail.com</h6>
+                      <h6 class="title"><a href="mailto:biblestudies3@gmail.com">biblestudies3@gmail.com</a><br></h6>
                   </div></div>
               </div><!-- .col-xs-6 -->
 
@@ -150,55 +154,22 @@
 	</div>
 	</section>
 
+<!-- Start: Footer (please keep this the same across all pages) -->
 	<footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-3">
+			<div class="col-lg-7">
 				<div class="widget">
-					<h5 class="widgetheading">Our Contact</h5>
 					<address>
-					<strong>Abovecompany Inc</strong><br>
-					JC Main Road, Near Silnile tower<br>
-					 Pin-21542 NewYork US.</address>
+					<strong>West Allis church of Christ</strong><br>
+					9413 W Greenfield Ave<br>
+					West Allis, WI 53214</address>
 					<p>
-						<i class="icon-phone"></i> (123) 456-789 - 1255-12584 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
+						<i class="icon-phone"></i> (414) 430-2000 <br>
+						<i class="icon-envelope-alt"></i> <a href="mailto:biblestudies3@gmail.com">biblestudies3@gmail.com</a><br>
 					</p>
 				</div>
 			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Quick Links</h5>
-					<ul class="link-list">
-						<li><a href="#">Latest Events</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career</a></li>
-						<li><a href="#">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Recent News</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
 	</div>
 	<div id="sub-footer">
 		<div class="container">
@@ -206,17 +177,13 @@
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy; Above Site All right reserved. Template By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
+							<span>&copy; 2024 West Allis church of Christ. All right reserved. Template By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
 						</p>
 					</div>
 				</div>
 				<div class="col-lg-6">
 					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
+						<li><a href="https://www.facebook.com/groups/metrochurchofchrist" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 					</ul>
 				</div>
 			</div>
