--- a/NewTemplate/contact.html
+++ b/NewTemplate/contact.html
@@ -12,7 +12,7 @@
 <link href="css/jcarousel.css" rel="stylesheet" />
 <link href="css/flexslider.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
- 
+
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -35,12 +35,12 @@
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li> 
-						<li><a href="about.html">About Us</a></li>
-						<li><a href="courses.html">Courses</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
-                        <li class="active"><a href="contact.html">Contact</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="what-we-believe.html">What we believe</a></li>
+                      <li><a href="what-to-expect.html">What to expect</a></li>
+                      <li><a href="resources.html">Resources</a></li>
+                      <li class="active"><a href="contact.html">Contact</a></li>
+                      <! --//now this section is highlighted -->
                     </ul>
                 </div>
             </div>
@@ -56,15 +56,20 @@
 	</div>
 	</section>
 	<section id="content">
-	
+
 	<div class="container">
 	<div class="row">
  <div class="col-md-12">
-							 
 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:300px;width:100%;"><div id="gmap_canvas" style="height:300px;width:100%;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.trivoo.net" id="get-map-data">trivoo</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(40.805478,-73.96522499999998),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(40.805478, -73.96522499999998)});infowindow = new google.maps.InfoWindow({content:"<b>The Breslin</b><br/>2880 Broadway<br/> New York" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
-								</div>
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2917.18833307294!2d-88.02966119999999!3d43.016422899999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88050542307b66fd%3A0xc6cd4d9f2178f8e0!2s9413+W+Greenfield+Ave%2C+West+Allis%2C+WI+53214!5e0!3m2!1sen!2sus!4v1427687634445" <div style="overflow:hidden;height:300px;width:100%;">></iframe>
+
+
+	</div>
 </div>
+
+
+
 
 
 	<div class="row">
@@ -103,106 +108,71 @@
 									</div>
 								</div>
 								<div class="col-md-6">
-								
-<div class="span4"><div class="title-box clearfix "><h3 class="title-box_primary">Contact info</h3></div> 
-<h5>Lorem ipsum dolor sit amet, cadipisicing sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium.</h5>
-<p>Lorem ipsum dolor sit amet, cadipisicing sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, cadipisicing sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium Atque sed, quidem quis praesentium, ut unde fuga error commodi architecto, laudantium culpa tenetur at id, beatae pet.<br>
+
+<div class="span4"><div class="title-box clearfix "><h3 class="title-box_primary">Contact info</h3></div>
+<h5>header</h5>
+<p>Please feel free to reach out if you'd like to study the Bible with us.<br>
 </p><address>
-<strong>The Company Name.<br>
-12345 St John Point,<br>
-Brisbean, ABC 12 St 11.</strong><br>
-Telephone: +1 234 567 890<br>
-FAX: +1 234 567 890<br>
-E-mail: <a href="mailto:info@sitename.org">mail@sitename.org</a><br>
-</address> </div> 
+<strong>West Allis church of Christ.<br>
+9413 W Greenfield Ave,<br>
+West Allis, WI 53214</strong><br>
+Telephone: +1 414 430 2000<br>
+
+E-mail: <a href="mailto:biblestudies3@gmail.com">biblestudies3@gmail.com</a><br>
+</address> </div>
 								</div>
 							</div>
 	</div>
- 
+
 	</section>
-	<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Our Contact</h5>
-					<address>
-					<strong>Abovecompany Inc</strong><br>
-					JC Main Road, Near Silnile tower<br>
-					 Pin-21542 NewYork US.</address>
-					<p>
-						<i class="icon-phone"></i> (123) 456-789 - 1255-12584 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Quick Links</h5>
-					<ul class="link-list">
-						<li><a href="#">Latest Events</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career</a></li>
-						<li><a href="#">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-					<div class="widget">
-					<h5 class="widgetheading">Recent News</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="sub-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="copyright">
-						<p>
-							<span>&copy; Above Site All right reserved. Template By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
-						</p>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	</footer>
-</div>
-<a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
-<!-- javascript
-    ================================================== -->
+
+
+  <!-- Start: Footer (please keep this the same across all pages) -->
+  	<footer>
+  	<div class="container">
+  		<div class="row">
+  			<div class="col-lg-7">
+  				<div class="widget">
+  					<address>
+  					<strong>West Allis church of Christ</strong><br>
+  					9413 W Greenfield Ave<br>
+  					West Allis, WI 53214</address>
+  					<p>
+  						<i class="icon-phone"></i> (414) 430-2000 <br>
+  						<i class="icon-envelope-alt"></i> <a href="mailto:biblestudies3@gmail.com">biblestudies3@gmail.com</a><br>
+  					</p>
+  				</div>
+  			</div>
+  	</div>
+  	<div id="sub-footer">
+  		<div class="container">
+  			<div class="row">
+  				<div class="col-lg-6">
+  					<div class="copyright">
+  						<p>
+  							<span>&copy; 2024 West Allis church of Christ. All right reserved. Template By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
+  						</p>
+  					</div>
+  				</div>
+  				<div class="col-lg-6">
+  					<ul class="social-network">
+  						<li><a href="https://www.facebook.com/groups/metrochurchofchrist" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+  					</ul>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  	</footer>
+  </div>
+  <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
+  <!-- javascript
+      ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.fancybox.pack.js"></script>
-<script src="js/jquery.fancybox-media.js"></script> 
+<script src="js/jquery.fancybox-media.js"></script>
 <script src="js/portfolio/jquery.quicksand.js"></script>
 <script src="js/portfolio/setting.js"></script>
 <script src="js/jquery.flexslider.js"></script>
