--- a/NewTemplate/contact.html
+++ b/NewTemplate/contact.html
@@ -31,21 +31,23 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                  <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a>
+										<h2>West Allis church of Christ</h2>
+                  <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a> -->
                 </div>
-                <div class="navbar-collapse collapse ">
+                <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                       <li><a href="index.html">Home</a></li>
-                      <li><a href="what-we-believe.html">What we believe</a></li>
+                      <!-- <li><a href="what-we-believe.html">What we believe</a></li>
                       <li><a href="what-to-expect.html">What to expect</a></li>
-                      <li><a href="resources.html">Resources</a></li>
+                      <li><a href="resources.html">Resources</a></li> -->
                       <li class="active"><a href="contact.html">Contact</a></li>
-                      <! --//now this section is highlighted -->
+
                     </ul>
                 </div>
             </div>
         </div>
 	</header><!-- end header -->
+
 	<section id="inner-headline">
 	<div class="container">
 		<div class="row">
@@ -71,8 +73,8 @@
 
 
 
-
-	<div class="row">
+<!-- This is the form to reach out. -->
+	<!-- <div class="row">
 								<div class="col-md-6">
 									<br>
 									<div class="alert alert-success hidden" id="contactSuccess">
@@ -107,11 +109,12 @@
 										</form>
 									</div>
 								</div>
-								<div class="col-md-6">
+								<div class="col-md-6"> -->
+<!-- End of form -->
+
 
 <div class="span4"><div class="title-box clearfix "><h3 class="title-box_primary">Contact info</h3></div>
-<h5>header</h5>
-<p>Please feel free to reach out if you'd like to study the Bible with us.<br>
+<h5>Please feel free to reach out if you'd like to study the Bible with us.</h5>
 </p><address>
 <strong>West Allis church of Christ.<br>
 9413 W Greenfield Ave,<br>
@@ -138,7 +141,7 @@ E-mail: <a href="mailto:biblestudies3@gmail.com">biblestudies3@gmail.com</a><br>
   					9413 W Greenfield Ave<br>
   					West Allis, WI 53214</address>
   					<p>
-  						<i class="icon-phone"></i> (414) 430-2000 <br>
+  						<i class="icon-phone"></i> <a href="tel:+14144302000">(414) 430-2000</a><br>
   						<i class="icon-envelope-alt"></i> <a href="mailto:biblestudies3@gmail.com">biblestudies3@gmail.com</a><br>
   					</p>
   				</div>
