--- a/NewTemplate/index.html
+++ b/NewTemplate/index.html
@@ -32,14 +32,15 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a>
+										<h2>West Allis church of Christ</h2>
+										<!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a> -->
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Home</a></li>
-					             	<li><a href="what-we-believe.html">What we believe</a></li>
+					             	<!-- <li><a href="what-we-believe.html">What we believe</a></li>
 						            <li><a href="what-to-expect.html">What to expect</a></li>
-                        <li><a href="resources.html">Resources</a></li>
+                        <li><a href="resources.html">Resources</a></li> -->
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -47,23 +48,7 @@
         </div>
 	</header>
 	<!-- end header -->
-<<<<<<< HEAD
 
-	<!-- start of the banner -->
-	<section id="featured">
-  <i class="fa fa-picture-o"><img src="img/logo.png" alt="logo"/></i>
-	</section>
-	<section class="callaction">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="aligncenter"><h1 class="aligncenter">Welcome one and all!!!</h1><span class="clear spacer_responsive_hide_mobile" style="height:13px;display:block;"></span>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</div>
-			</div>
-		</div>
-	</div>
-	</section>
-=======
->>>>>>> fa56bc5b7c3d6572f0c0e743e3119c5d5a96a3b3
 
 
 	<!-- Slider -->
@@ -74,7 +59,7 @@
                 <div class="flex-caption">
                    <div class="item_introtext">
 					<strong>Welcome!</strong>
-					<p>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</p> </div>
+					<p>We are a simple group of Christians who meet together here in the Milwaukee area.</p> </div>
                 </div>
               </li>
               <li>
@@ -82,7 +67,7 @@
                 <div class="flex-caption">
                      <div class="item_introtext">
 					<strong>Welcome!</strong>
-					<p>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</p> </div>
+					<p>We are a simple group of Christians who meet together here in the Milwaukee area.</p> </div>
                 </div>
               </li>
               <li>
@@ -90,7 +75,7 @@
                 <div class="flex-caption">
                      <div class="item_introtext">
 					<strong>Welcome!</strong>
-					<p>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</p> </div>
+					<p>We are a simple group of Christians who meet together here in the Milwaukee area.</p> </div>
                 </div>
               </li>
             </ul>
@@ -106,8 +91,10 @@
 
 <!-- This is the RED section -->
 		<div class="col-md-4 text-center">
-		<span class="icons c1"><i class="fa fa-trophy"></i></span>  <div class="box-area">
-		<h3>Meeting times</h3> <div class="box">
+		<!-- <span class="icons c1"><i class="fa fa-trophy"></i></span>  -->
+		<!-- <div class="box-area"> -->
+		<h3>Meeting times</h3>
+		<div class="box">
 
         <div class="vertical-simple-list"><br>
             <p>
@@ -123,17 +110,17 @@
         </div>
     </div>
 	</div>
-		</div>
+		<!-- </div> -->
 
 		<!-- This is the purple section -->
 		<div class="col-md-4 text-center">
-		<span class="icons c2"><i class="fa fa-picture-o"></i></span> <div class="box-area">
+		<!-- <span class="icons c2"><i class="fa fa-picture-o"></i></span> <div class="box-area"> -->
 		<h3>Location</h3> <p>
 
       <div class="vertical-simple-list"><br>
               <p><a href="https://www.google.com/maps/place/9413+W+Greenfield+Ave,+West+Allis,+WI+53214/@43.0164229,-88.0296612,17z/data=!3m1!4b1!4m2!3m1!1s0x88050542307b66fd:0xc6cd4d9f2178f8e0">9413 W Greenfield Ave, West Allis, WI</a></h6>
           </a></p>
-              <p> We meet on the mural side of Crawdaddy's on Greenfield.
+              <p> We meet on the East-facing side of Crawdaddy's on Greenfield.
 					</a></p>
 		          <p>(For help with directions, click the address above, or call/text 414-430-2000)
           </a></p>
@@ -141,35 +128,35 @@
       </div><!-- .vertical-simple-list -->
 
     </p></div>
-		</div>
+		<!-- </div> -->
 		<!-- This is the green section -->
 		<div class="col-md-4 text-center">
-		<span class="icons c3"><i class="fa fa-desktop"></i></span>
-			<div class="box-area">
+		<!-- <span class="icons c3"><i class="fa fa-desktop"></i></span> -->
+			<!-- <div class="box-area"> -->
 		<h3>Contact Us!</h3> <p>
 
 
       <div class="section-content clearfix">
           <div class="vertical-simple-list contact-list">
               <br />
-              <div class="col-xs-6">
+              <!-- <div class="col-xs-6"> -->
                   <!-- list item -->
-                  <div class="item clearfix"><div class="item-content">
-                      <div class="icon"><span class="glyphicon glyphicon-map-marker"></span></div>
-                      <h6 class="title">West Allis church of Christ<br />9413 W Greenfield Ave<br/>West Allis, WI</h6>
-                  </div></div>
-              </div><!-- .col-xs-6 -->
+                  <!-- <div class="item clearfix"><div class="item-content">
 
-              <div class="col-xs-6">
+                      <h6 class="title">West Allis church of Christ<br />9413 W Greenfield Ave<br/>West Allis, WI</h6>
+                  </div></div> -->
+              <!-- </div><! .col-xs-6 -->
+
+              <!-- <div class="col-xs-6"> -->
                   <!-- list item -->
                   <div class="item clearfix"><div class="item-content">
-                      <div class="icon"><span class="glyphicon glyphicon-earphone"></span></div>
+
                       <h6 class="title">414-430-2000</h6>
                   </div></div>
 
                   <!-- list item -->
                   <div class="item clearfix"><div class="item-content">
-                      <div class="icon"><span class="glyphicon glyphicon-envelope"></span></div>
+
                       <h6 class="title"><a href="mailto:biblestudies3@gmail.com">biblestudies3@gmail.com</a><br></h6>
                   </div></div>
               </div><!-- .col-xs-6 -->
@@ -199,7 +186,7 @@
 					9413 W Greenfield Ave<br>
 					West Allis, WI 53214</address>
 					<p>
-						<i class="icon-phone"></i> (414) 430-2000 <br>
+						<i class="icon-phone"></i> <a href="tel:+14144302000">(414) 430-2000</a> <br>
 						<i class="icon-envelope-alt"></i> <a href="mailto:biblestudies3@gmail.com">biblestudies3@gmail.com</a><br>
 					</p>
 				</div>
