--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Above Multi-purpose Free Bootstrap Responsive Template</title>
+<title>West Allis Church of Christ - Welcome and Worship</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="" />
+<meta name="description" content="Join the West Allis Church of Christ for Bible study and worship. Located in West Allis, WI. All are welcome!" />
+<meta name="keywords" content="West Allis Church of Christ, Bible study, worship service, Christian community, Milwaukee churches" />
 <meta name="author" content="http://webthemez.com" />
+<meta property="og:title" content="West Allis Church of Christ" />
+<meta property="og:description" content="Join the West Allis Church of Christ for Bible study and worship. Located in West Allis, WI. All are welcome!" />
+<meta property="og:url" content="http://westallischurch.com" />
+<meta property="og:image" content="http://westallischurch.com/img/slides/1.jpg" />
+<meta name="twitter:card" content="summary_large_image" />
+<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
+
 <!-- css -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
@@ -14,7 +22,29 @@
 <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet" />
 
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!-- JSON-LD Structured Data -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "West Allis Church of Christ",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "9413 W Greenfield Ave",
+    "addressLocality": "West Allis",
+    "addressRegion": "WI",
+    "postalCode": "53214",
+    "addressCountry": "US"
+  },
+  "telephone": "+14144302000",
+  "email": "biblestudies3@gmail.com",
+  "url": "http://westallischurch.com",
+  "sameAs": [
+    "https://www.facebook.com/groups/metrochurchofchrist"
+  ]
+}
+</script>
+
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -32,15 +62,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-										<h2>West Allis church of Christ</h2>
-										<!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a> -->
+					<h2>West Allis Church of Christ</h2>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Home</a></li>
-					             	<!-- <li><a href="what-we-believe.html">What we believe</a></li>
-						            <li><a href="what-to-expect.html">What to expect</a></li>
-                        <li><a href="resources.html">Resources</a></li> -->
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -50,12 +76,11 @@
 	<!-- end header -->
 
 
-
 	<!-- Slider -->
         <div id="main-slider" class="flexslider">
             <ul class="slides">
               <li>
-                <img src="img/slides/1.jpg" alt="" />
+                <img src="img/slides/1.jpg" alt="Welcome to West Allis Church of Christ" />
                 <div class="flex-caption">
                    <div class="item_introtext">
 					<strong>Welcome!</strong>
@@ -63,7 +88,7 @@
                 </div>
               </li>
               <li>
-                <img src="img/slides/2.jpg" alt="" />
+                <img src="img/slides/2.jpg" alt="West Allis Church Bible Study" />
                 <div class="flex-caption">
                      <div class="item_introtext">
 					<strong>Welcome!</strong>
@@ -71,7 +96,7 @@
                 </div>
               </li>
               <li>
-                <img src="img/slides/3.jpg" alt="" />
+                <img src="img/slides/3.jpg" alt="West Allis Worship Service" />
                 <div class="flex-caption">
                      <div class="item_introtext">
 					<strong>Welcome!</strong>
@@ -89,86 +114,45 @@
 			<div class="row">
 		<div class="skill-home"> <div class="skill-home-solid clearfix">
 
-<!-- This is the RED section -->
+	<!-- This is the RED section -->
 		<div class="col-md-4 text-center">
-		<!-- <span class="icons c1"><i class="fa fa-trophy"></i></span>  -->
-		<!-- <div class="box-area"> -->
-		<h3>Meeting times</h3>
+		<h3>Meeting Times</h3>
 		<div class="box">
 
         <div class="vertical-simple-list"><br>
-            <p>
-                Sunday 9:30am - Bible Study
-            </p>
-            <p>
-                Sunday 10:30am - Worship Service
-            </p>
-            <p>
-                Wednesday 7:00pm - Bible Study
-            </p>
-
+            <p>Sunday 9:30am - Bible Study</p>
+            <p>Sunday 10:30am - Worship Service</p>
+            <p>Wednesday 7:00pm - Bible Study</p>
         </div>
     </div>
 	</div>
-		<!-- </div> -->
 
 		<!-- This is the purple section -->
 		<div class="col-md-4 text-center">
-		<!-- <span class="icons c2"><i class="fa fa-picture-o"></i></span> <div class="box-area"> -->
-		<h3>Location</h3> <p>
+		<h3>Location</h3>
+		<div class="box">
 
-      <div class="vertical-simple-list"><br>
-              <p><a href="https://www.google.com/maps/place/9413+W+Greenfield+Ave,+West+Allis,+WI+53214/@43.0164229,-88.0296612,17z/data=!3m1!4b1!4m2!3m1!1s0x88050542307b66fd:0xc6cd4d9f2178f8e0">9413 W Greenfield Ave, West Allis, WI</a></h6>
-          </a></p>
-              <p> We meet on the East-facing side of Crawdaddy's on Greenfield.
-					</a></p>
-		          <p>(For help with directions, click the address above, or call/text 414-430-2000)
-          </a></p>
+        <div class="vertical-simple-list"><br>
+              <p><a href="https://www.google.com/maps/place/9413+W+Greenfield+Ave,+West+Allis,+WI+53214/@43.0164229,-88.0296612,17z/data=!3m1!4b1!4m2!3m1!1s0x88050542307b66fd:0xc6cd4d9f2178f8e0">9413 W Greenfield Ave, West Allis, WI</a></p>
+              <p>We meet on the East-facing side of Crawdaddy's on Greenfield.</p>
+              <p>(For help with directions, click the address above, or call/text <a href="tel:+14144302000">414-430-2000</a>)</p>
+        </div>
 
-      </div><!-- .vertical-simple-list -->
+    </div>
+	</div>
 
-    </p></div>
-		<!-- </div> -->
 		<!-- This is the green section -->
 		<div class="col-md-4 text-center">
-		<!-- <span class="icons c3"><i class="fa fa-desktop"></i></span> -->
-			<!-- <div class="box-area"> -->
-		<h3>Contact Us!</h3> <p>
+		<h3>Contact Us!</h3>
+		<div class="box">
 
+        <div class="vertical-simple-list contact-list">
+              <p><strong>Phone:</strong> <a href="tel:+14144302000">414-430-2000</a></p>
+              <p><strong>Email:</strong> <a href="mailto:biblestudies3@gmail.com">biblestudies3@gmail.com</a></p>
+        </div>
 
-      <div class="section-content clearfix">
-          <div class="vertical-simple-list contact-list">
-              <br />
-              <!-- <div class="col-xs-6"> -->
-                  <!-- list item -->
-                  <!-- <div class="item clearfix"><div class="item-content">
-
-                      <h6 class="title">West Allis church of Christ<br />9413 W Greenfield Ave<br/>West Allis, WI</h6>
-                  </div></div> -->
-              <!-- </div><! .col-xs-6 -->
-
-              <!-- <div class="col-xs-6"> -->
-                  <!-- list item -->
-                  <div class="item clearfix"><div class="item-content">
-
-                      <h6 class="title">414-430-2000</h6>
-                  </div></div>
-
-                  <!-- list item -->
-                  <div class="item clearfix"><div class="item-content">
-
-                      <h6 class="title"><a href="mailto:biblestudies3@gmail.com">biblestudies3@gmail.com</a><br></h6>
-                  </div></div>
-              </div><!-- .col-xs-6 -->
-
-          </div><!-- .vertical-simple-list -->
-      </div><!-- .section-content -->
-
-    </div><!-- .section-container -->
-    <!-- End: Contact Us -->
-
-
-    </p></div>
+    </div>
+	</div>
 		</div>
 		</div></div>
 		</div>
@@ -182,7 +166,7 @@
 			<div class="col-lg-7">
 				<div class="widget">
 					<address>
-					<strong>West Allis church of Christ</strong><br>
+					<strong>West Allis Church of Christ</strong><br>
 					9413 W Greenfield Ave<br>
 					West Allis, WI 53214</address>
 					<p>
@@ -198,7 +182,7 @@
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy; 2024 West Allis church of Christ. All right reserved. Template By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
+							<span>&copy; 2024 West Allis Church of Christ. All rights reserved. Template By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
 						</p>
 					</div>
 				</div>
@@ -229,3 +213,4 @@
 <script src="js/owl-carousel/owl.carousel.js"></script>
 </body>
 </html>
+
