--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>West Allis Church of Christ - Welcome and Worship</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="Join the West Allis Church of Christ for Bible study and worship. Located in West Allis, WI. All are welcome!" />
-<meta name="keywords" content="West Allis Church of Christ, Bible study, worship service, Christian community, Milwaukee churches" />
+<meta name="keywords" content="Milwaukee Church of Christ, Church of Christ, West Allis Churches, West Allis Church of Christ, Bible study, worship service, Christian community, Milwaukee churches, Church in West Allis, Church, Non-denominational" />
 <meta name="author" content="http://webthemez.com" />
 <meta property="og:title" content="West Allis Church of Christ" />
 <meta property="og:description" content="Join the West Allis Church of Christ for Bible study and worship. Located in West Allis, WI. All are welcome!" />
